# rust-chart-worker

./: .cursorrules  .cursorules  .gitignore  AGENTS.md  Cargo.toml  README.md  chart-enhancement-spec.yaml  justfile  package.json  release_notes.md  test_fixed_themes.rs  wrangler.toml
docs/: api.md  architecture.md  implementation.md  optimization.md
src/: lib.rs  models.rs
src/charts/: area.rs  bar.rs  bubble.rs  candlestick.rs  gauge.rs  heatmap.rs  histogram.rs  line.rs  mod.rs  multi_line.rs  pie.rs  radar.rs  scatter.rs  stacked_bar.rs
src/themes/: mod.rs
src/utils/: mod.rs  png.rs  svg.rs
