[package]
name = "rust-chart-wrker"
version = "0.1.0"
edition = "2021"
authors = [ "Kazuhiro Homma <kazu.homma@gmail.com>" ]

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features=["http"] }
worker-macros = { version = "0.5.0", features=["http"] }
console_error_panic_hook = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = { version = "0.3.4", default-features = false, features = ["svg_backend", "line_series", "area_series"] }
