[package]
name = "rust-chart-worker"
version = "1.1.1"
edition = "2021"
authors = [ "Kazuhiro Homma <kazu.homma@gmail.com>" ]
description = "A service that dynamically generates charts using Rust on Cloudflare Workers"
repository = "https://github.com/kazuph/rust-chart-worker"
license = "MIT"

[package.metadata.release]
release = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features=["http"] }
worker-macros = { version = "0.5.0", features=["http"] }
console_error_panic_hook = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.11"
resvg = { version = "0.35.0", features = ["text"] }
tiny-skia = "0.10.0"
usvg = { version = "0.35.0", features = ["text"] }
usvg-text-layout = "0.35.0"
fontdb = "0.14.1"
getrandom = { version = "0.2", features = ["js"] }
