[package]
name = "rust-chart-worker"
version = "1.1.2"
edition = "2021"
authors = [ "Kazuhiro Homma <kazu.homma@gmail.com>" ]
description = "A service that dynamically generates charts using Rust on Cloudflare Workers"
repository = "https://github.com/kazuph/rust-chart-worker"
license = "MIT"

[package.metadata.release]
release = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["http"], default-features = false }
worker-macros = { version = "0.5.0", features = ["http"] }
console_error_panic_hook = "0.1.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
resvg = { version = "0.35.0", features = ["text"], default-features = false }
tiny-skia = { version = "0.10.0", default-features = false }
usvg = { version = "0.35.0", features = ["text"], default-features = false }
usvg-text-layout = "0.35.0"
fontdb = { version = "0.14.1", default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
